Refactor jvm-memory and jvm-gc endpoints to use path-based query
This series of patches brings the jvm-gc and jvm-memory APIs in line
with the other web services.

Previously, you would GET or PUT
  https://host**/jvm-memory/0.0.2?query=jvmId=={jvmId} (properly escaped, of course).

Now, you call
  https://host/jvm-memory/0.0.3/systems/{systemId}/jvms/{jvmId}.

In addition, I've added a new endpoint (valid for GET only)
  https://host/jvm-memory/0.0.3/jvms/{jvmId}
...which is easier for the web client to call.  I didn't implement this for POST, etc.

Review-thread: http://icedtea.classpath.org/pipermail/thermostat/2017-August/024586.html
